--- a/pages/services.html
+++ b/pages/services.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header class="text-center d-grid gap-0 row-gap-3">
-        <div class="">
+        <div class="mb-1">
             <img src="/img/Logo.png" alt="Logo">
         </div>
-        <nav class="d-flex justify-content-around" >
-            <a href="../index.html">Inicio</a>
-            <a href="/pages/services.html">Servicios</a>
-            <a href="/pages/about.html">Sobre Nosotros</a>
-            <a href="/pages/contacts.html">Contactanos</a>
+        <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
+            <a href="index.html" class="px-5">Inicio</a>
+            <a href="/pages/services.html" class="px-5">Servicios</a>
+            <a href="/pages/about.html" class="px-5">Sobre Nosotros</a>
+            <a href="/pages/contacts.html" class="px-5">Contactanos</a>
         </nav>
     </header>
