--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetSalud</title>
+    <title>PetSalud - Sobre Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/css/about.css ">
+    <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
     
 
 </head>
@@ -16,9 +18,74 @@
             <img src="/img/Logo.png" alt="Logo">
         </div>
         <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="index.html" class="px-5">Inicio</a>
+            <a href="/index.html" class="px-5">Inicio</a>
             <a href="/pages/services.html" class="px-5">Servicios</a>
             <a href="/pages/about.html" class="px-5">Sobre Nosotros</a>
             <a href="/pages/contacts.html" class="px-5">Contactanos</a>
         </nav>
     </header>
+    <main>  
+        <div class="cardBg">
+            <h2 class="text-center fw-semibold">Sobre Nosotros</h2>
+        </div>
+        <div class="grupocards1 d-flex justify-content-around">
+            <div class="cardimg p-4">
+                <img src="../img/cardimg.png" alt="">
+            </div>
+            <div class="card text-center pt-5">
+                <h2 class="fw-semibold">Nuestra Historia</h2>
+                <div class="card-body"><p class="text-secondary">Fundada en 2015, Petsalud nació con el propósito de ofrecer atención veterinaria de calidad. Con un equipo apasionado, hemos crecido incorporando tecnología avanzada para mejorar la salud y bienestar de las mascotas.</p></div>
+            </div>
+        </div>
+        <div class="grupocards2 d-flex justify-content-around">
+            <div class="card cardG2 text-center pt-5">
+                <h2 class="fw-semibold">Mision</h2>
+                <div class="card-body"><p class="text-secondary">En Petsalud, ofrecemos atención veterinaria integral y personalizada, priorizando el bienestar de las mascotas y la tranquilidad de sus dueños, a través de un equipo profesional y tratamientos de alta calidad.</p></div>
+            </div>
+            <div class="card cardG2 text-center pt-5">
+                <h2 class="fw-semibold">Vision</h2>
+                <div class="card-body"><p class="text-secondary">En Petsalud, tratamos a tus mascotas como parte de nuestra familia. Con más de 7 años de experiencia, nuestro equipo de veterinarios y expertos se dedica a brindarles la mejor atención médica, siempre con cariño y compromiso.</p></div>
+            </div>
+        </div>
+        <div class="container areas py-5">
+            <h2 class="fw-semibold py-2">Nuestras Areas</h2>
+            <div class="container-ms bg-body-secondary rounded-5 p-5 d-grid gap-0 row-gap-3 text-center d-flex justify-content-around">
+                <div class="card">
+                    <img src="../img/ZonaRehabilitacion.png" alt="">
+                    <div class="card-body">
+                        <h5>Zona de Rehabilitacion</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../img/Peluqueria.png" alt="">
+                    <div class="card-body">
+                        <h5>Zona de Peluqueria</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../img/FarmaciaClinica.png" alt="">
+                    <div class="card-body">
+                        <h5>Farmacia Clinica</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../img/PetShop.png" alt="">
+                    <div class="card-body">
+                        <h5>PetShop</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="text-center pb-4 bg-white mt-4">
+        <div class="container">
+            <p class="mb-0">&copy; 2025 Designed by PetSalud</p>
+            <div class="social-media pt-2">
+                <a href="https://www.facebook.com/share/1HLmB5awQZ/?mibextid=wwXIfr" class="px-0"><i class="bi bi-facebook p-2 rounded-3"></i></a>
+                <a href="https://www.instagram.com/petsalud___?igsh=MW5ncTVmdG1yOXFrNQ==" class="px-0"><i class="bi bi-instagram p-2  rounded-3"></i></a>
+                <a href="https://www.tiktok.com/@petsalud_itr?_t=ZM-90HHjDc3pr2&_r=1" class="px-0"><i class="bi bi-tiktok p-2  rounded-3"></i></a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
