--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetSalud</title>
+    <title>PetSalud - Contactanos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/css/contacts.css">
+    <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
     
 
 </head>
@@ -16,9 +18,50 @@
             <img src="/img/Logo.png" alt="Logo">
         </div>
         <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="index.html" class="px-5">Inicio</a>
+            <a href="/index.html" class="px-5">Inicio</a>
             <a href="/pages/services.html" class="px-5">Servicios</a>
             <a href="/pages/about.html" class="px-5">Sobre Nosotros</a>
             <a href="/pages/contacts.html" class="px-5">Contactanos</a>
         </nav>
     </header>
+
+    <main>
+        <div class="cardBg">
+            <h2 class="text-center fw-semibold">Contáctanos</h2>
+        </div>
+        <div class="container ContDireccion text-center p-4">
+            <img src="../img/Direccion.png" alt="Direccion" class="rounded-5 py-2" width="60%">
+            <br>
+            <a href="https://maps.app.goo.gl/CGDiUTS3bXJz9WhW8" class="py-2 fs-5" target="_blank">Avenida Aguilares 218 San Salvador CP, San Salvador 1101</a>
+        </div>
+    </main>
+
+    <footer class=" pb-4 bg-white mt-4">
+        <div class="container d-flex RedesyHorarios">
+            <div class="links-RedesSociales row col-6 p-4">
+                <h5>Contactanos en nuestras redes sociales:</h5>
+                <a href="https://www.facebook.com/share/1HLmB5awQZ/?mibextid=wwXIfr" class="pt-2 fs-5"><i class="bi bi-facebook px-3  rounded-3 fs-3"></i>petsalud.2025</a>
+                <a href="https://www.instagram.com/petsalud___?igsh=MW5ncTVmdG1yOXFrNQ==" class="pt-2 fs-5"><i class="bi bi-instagram px-3 rounded-3 fs-3"></i>petsalud___</a>
+                <a href="https://www.tiktok.com/@petsalud_itr?_t=ZM-90HHjDc3pr2&_r=1" class="pt-2 fs-5"><i class="bi bi-tiktok  px-3 rounded-3 fs-3"></i>petsalud_itr</a>
+            </div>
+            <div class="container Horarios text-center p-3 rounded-5 bg-body-secondary">
+                <h2>Horarios</h2>
+                <div class="d-flex ">
+                    <div class="horarios-dias row col-8 align-items-start">
+                        <p class="p-3">Lun a Vie</p>
+                        <p class="p-3">Sab y Dom</p>
+                    </div>
+                    <div class="horarios-hora">
+                        <p class="p-3">7:00 am a 9:00pm</p>
+                        <p class="p-3">7:00 am a 5:00pm</p>
+                    </div>
+                </div>
+                <h5 class="pt-5 text-danger">Emergencias 24/7</h5>
+            </div>
+        </div>
+        <div class="bg-body-color text-center">
+            <p class="mb-0 pt-4">&copy; 2025 Designed by PetSalud</p>
+        </div>
+    </footer>
+</body>
+</html>
