--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
     
 
@@ -15,13 +15,13 @@
 <body >
     <header class="text-center d-grid gap-0 row-gap-3">
         <div class="mb-1">
-            <img src="/img/Logo.png" alt="Logo">
+            <img src="./img/Logo.png" alt="Logo">
         </div>
         <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="/index.html" class="px-5">Inicio</a>
-            <a href="/pages/services.html" class="px-5">Servicios</a>
-            <a href="/pages/about.html" class="px-5">Sobre Nosotros</a>
-            <a href="/pages/contacts.html" class="px-5">Contactanos</a>
+            <a href="index.html" class="px-5">Inicio</a>
+            <a href="./pages/services.html" class="px-5">Servicios</a>
+            <a href="./pages/about.html" class="px-5">Sobre Nosotros</a>
+            <a href="./pages/contacts.html" class="px-5">Contactanos</a>
         </nav>
     </header>
     <main>
@@ -29,7 +29,7 @@
         <div class="col-md-6 mb-4 mb-md-0">
             <h1 class="textoPresentacion display-4 fw-bold 600 px-5">La salud de tu <span class="Pet">Pet</span>, <br>es nuestra prioridad</h1>
                 <div class="d-flex justify-content-center justify-content-md-start mt-4 ms-5">
-                    <a href="/pages/services.html" class="btn btn-primary btn-lg me-3">Servicios</a>
+                    <a href="./pages/services.html" class="btn btn-primary btn-lg me-3">Servicios</a>
                     <a href="" class="btnPrograma btn btn-outline-light pt-2 fs-5"> <i class="bi bi-download px-2 rounded-3"></i>Descargar Programa</a>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <p class="lead text-secondary">
                     Contamos con diversos servicios incluyendo vacunaciones, consultas, peluquería y hospitalización.
                 </p>
-                <a href="../pages/services.html" class="btn btn-primary btn-lg  rounded-pill p-3 mb-5 py-2 px-4 mt-2">
+                <a href="./pages/services.html" class="btn btn-primary btn-lg  rounded-pill p-3 mb-5 py-2 px-4 mt-2">
                     Ver Servicios <i class="bi bi-arrow-right ms-2"></i>
                 </a>
             </div>
@@ -58,21 +58,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/vacunas.jpg" alt=" ">
+                    <img src="./img/vacunas.jpg" alt=" ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Vacunaciones</h5>
                         <p class="text-light">Vacunas contra Rabia, Parasitos, Moquillo, Parvovirus</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/consultavet.jpg" alt=" ">
+                    <img src="./img/consultavet.jpg" alt=" ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Consultas</h5>
                         <p>Revisiones fisicas, Chequeos de salud, Controles de parasitos</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/baño.jpg" alt=" ">
+                    <img src="./img/baño.jpg" alt=" ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Baños</h5>
                         <p>Baños AntiPulgas, Baño de Limpieza, Baños Terapeuticos</p>
