--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/css/about.css ">
+    <link rel="stylesheet" href="../css/about.css">
     <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
     
 
@@ -18,10 +18,10 @@
             <img src="/img/Logo.png" alt="Logo">
         </div>
         <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="/index.html" class="px-5">Inicio</a>
-            <a href="/pages/services.html" class="px-5">Servicios</a>
-            <a href="/pages/about.html" class="px-5">Sobre Nosotros</a>
-            <a href="/pages/contacts.html" class="px-5">Contactanos</a>
+            <a href="../index.html" class="px-5">Inicio</a>
+            <a href="./services.html" class="px-5">Servicios</a>
+            <a href="./about.html" class="px-5">Sobre Nosotros</a>
+            <a href="./contacts.html" class="px-5">Contactanos</a>
         </nav>
     </header>
     <main>  
