--- a/pages/services.html
+++ b/pages/services.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/services.css">
-    <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo2.png" type="image/x-icon">
     
 
 </head>
@@ -123,7 +123,7 @@
                 <div class="card" >
                     <img src="../img/Hospitalizacion.png" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                        <h5 class="card-title">hospitalización</h5>
+                        <h5 class="card-title">Hospitalización</h5>
                         <a href="#" class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Ver mas</a>
                         <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
@@ -183,7 +183,7 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Analisis e sangre y orina</h1>
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Analisis de sangre y orina</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
