--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
 <body>
     <header class="text-center d-grid gap-0 row-gap-3">
         <div class="mb-1">
-            <img src="../img/Logo.png" alt="Logo">
+            <img src="/img/Logo.png" alt="Logo">
         </div>
         <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
             <a href="../index.html" class="px-5">Inicio</a>
