--- a/pages/about.html
+++ b/pages/about.html
@@ -13,16 +13,25 @@
 
 </head>
 <body>
-    <header class="text-center d-grid gap-0 row-gap-3">
-        <div class="mb-1">
-            <img src="../img/Logo.png" alt="Logo">
+    <header class="py-3">
+    <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between">
+        <div class="logo mb-2 mb-md-0 text-center text-md-start">
+            <img src="../img/Logo.png" alt="Logo" class="img-fluid" style="max-height:80px;">
         </div>
-        <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="../index.html" class="px-5">Inicio</a>
-            <a href="./services.html" class="px-5">Servicios</a>
-            <a href="./about.html" class="px-5">Sobre Nosotros</a>
-            <a href="./contacts.html" class="px-5">Contactanos</a>
+        <nav class="navbar navbar-expand-md navbar-light p-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link px-3" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./services.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./about.html">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./contacts.html">Contáctanos</a></li>
+                </ul>
+            </div>
         </nav>
+    </div>
     </header>
     <main>  
         <div class="cardBg">
@@ -40,40 +49,11 @@
         <div class="grupocards2 d-flex justify-content-around">
             <div class="card cardG2 text-center pt-5">
                 <h2 class="fw-semibold">Mision</h2>
-                <div class="card-body"><p class="text-secondary">En Petsalud, ofrecemos atención veterinaria integral y personalizada, priorizando el bienestar de las mascotas y la tranquilidad de sus dueños, a través de un equipo profesional y tratamientos de alta calidad.</p></div>
+                <div class="card-body"><p class="text-secondary">Proporcionar atención veterinaria de calidad, cuidando la salud y bienestar de cada paciente animal, ofreciendo servicios confiables y personalizados a nuestros clientes, con un equipo profesional comprometido y tecnología que respalde nuestros procesos.</p></div>
             </div>
             <div class="card cardG2 text-center pt-5">
                 <h2 class="fw-semibold">Vision</h2>
-                <div class="card-body"><p class="text-secondary">En Petsalud, tratamos a tus mascotas como parte de nuestra familia. Con más de 7 años de experiencia, nuestro equipo de veterinarios y expertos se dedica a brindarles la mejor atención médica, siempre con cariño y compromiso.</p></div>
-            </div>
-        </div>
-        <div class="container areas py-5">
-            <h2 class="fw-semibold py-2">Nuestras Areas</h2>
-            <div class="container-ms bg-body-secondary rounded-5 p-5 d-grid gap-0 row-gap-3 text-center d-flex justify-content-around">
-                <div class="card">
-                    <img src="../img/ZonaRehabilitacion.png" alt="">
-                    <div class="card-body">
-                        <h5>Zona de Rehabilitacion</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../img/Peluqueria.png" alt="">
-                    <div class="card-body">
-                        <h5>Zona de Peluqueria</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../img/FarmaciaClinica.png" alt="">
-                    <div class="card-body">
-                        <h5>Farmacia Clinica</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../img/PetShop.png" alt="">
-                    <div class="card-body">
-                        <h5>PetShop</h5>
-                    </div>
-                </div>
+                <div class="card-body"><p class="text-secondary">Ser la clínica veterinaria de referencia en nuestra comunidad, reconocida por la excelencia en el cuidado de los animales, la innovación en nuestros servicios y la confianza que generamos en nuestros clientes.</p></div>
             </div>
         </div>
     </main>
