--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -13,52 +13,78 @@
 
 </head>
 <body>
-    <header class="text-center d-grid gap-0 row-gap-3">
-        <div class="mb-1">
-            <img src="../img/Logo.png" alt="Logo">
+    <header class="py-3">
+    <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between">
+        <div class="logo mb-2 mb-md-0 text-center text-md-start">
+            <img src="../img/Logo.png" alt="Logo" class="img-fluid" style="max-height:80px;">
         </div>
-        <nav class="d-flex justify-content-around mt-4 mb-2 fs-5" >
-            <a href="../index.html" class="px-5">Inicio</a>
-            <a href="./services.html" class="px-5">Servicios</a>
-            <a href="./about.html" class="px-5">Sobre Nosotros</a>
-            <a href="./contacts.html" class="px-5">Contactanos</a>
+        <nav class="navbar navbar-expand-md navbar-light p-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link px-3" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./services.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./about.html">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="./contacts.html">Contáctanos</a></li>
+                </ul>
+            </div>
         </nav>
-    </header>
+    </div>
+</header>
 
     <main>
         <div class="cardBg">
             <h2 class="text-center fw-semibold">Contáctanos</h2>
         </div>
         <div class="container ContDireccion text-center p-4">
-            <img src="../img/Direccion.png" alt="Direccion" class="rounded-5 py-2" width="60%">
-            <br>
-            <a href="https://maps.app.goo.gl/CGDiUTS3bXJz9WhW8" class="py-2 fs-5" target="_blank">Avenida Aguilares 218 San Salvador CP, San Salvador 1101</a>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3875.928859257971!2d-89.20558980132753!3d13.72275681936551!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6330813f89e61f%3A0xcb93eef8cc8c07e1!2sInstituto%20T%C3%A9cnico%20Ricaldone!5e0!3m2!1ses!2ssv!4v1760591848186!5m2!1ses!2ssv" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
-
+    
     <footer class=" pb-4 bg-white mt-4">
-        <div class="container d-flex RedesyHorarios">
-            <div class="links-RedesSociales row col-6 p-4">
-                <h5>Contactanos en nuestras redes sociales:</h5>
-                <a href="https://www.facebook.com/share/1HLmB5awQZ/?mibextid=wwXIfr" class="pt-2 fs-5"><i class="bi bi-facebook px-3  rounded-3 fs-3"></i>petsalud.2025</a>
-                <a href="https://www.instagram.com/petsalud___?igsh=MW5ncTVmdG1yOXFrNQ==" class="pt-2 fs-5"><i class="bi bi-instagram px-3 rounded-3 fs-3"></i>petsalud___</a>
-                <a href="https://www.tiktok.com/@petsalud_itr?_t=ZM-90HHjDc3pr2&_r=1" class="pt-2 fs-5"><i class="bi bi-tiktok  px-3 rounded-3 fs-3"></i>petsalud_itr</a>
-            </div>
-            <div class="container Horarios text-center p-3 rounded-5 bg-body-secondary">
-                <h2>Horarios</h2>
-                <div class="d-flex ">
-                    <div class="horarios-dias row col-8 align-items-start">
-                        <p class="p-3">Lun a Vie</p>
-                        <p class="p-3">Sab y Dom</p>
+            <section id="contacto" class="py-5">
+                <div class="container">
+                    <h5 class="text-center mb-5">Si tienes alguna duda o consulta, escríbenos aquí:</h5>
+                    <div class="container my-5">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="card shadow-lg border-0 rounded-4">
+                                    <div class="card-body p-4">
+                                        <h3 class="text-center mb-4">Contáctanos</h3>
+                                        <form>
+                                            <div class="mb-3">
+                                                <label for="nombre" class="form-label">Nombre completo</label>
+                                                <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+                                            </div>
+
+                                            <div class="mb-3">
+                                                <label for="email" class="form-label">Correo electrónico</label>
+                                                <input type="email" class="form-control" id="email" placeholder="tu@correo.com" required>
+                                            </div>
+
+                                            <div class="mb-3">
+                                                <label for="asunto" class="form-label">Asunto</label>
+                                                <input type="text" class="form-control" id="asunto" placeholder="Motivo del mensaje" required>
+                                            </div>
+
+                                            <div class="mb-3">
+                                                <label for="mensaje" class="form-label">Mensaje</label>
+                                                <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+                                            </div>
+                                            <div class="d-grid">
+                                                <button type="submit" class="btn btn-primary btn-lg">Enviar mensaje</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="horarios-hora">
-                        <p class="p-3">7:00 am a 9:00pm</p>
-                        <p class="p-3">7:00 am a 5:00pm</p>
-                    </div>
+    
                 </div>
-                <h5 class="pt-5 text-danger">Emergencias 24/7</h5>
-            </div>
-        </div>
+            </section>
         <div class="bg-body-color text-center">
             <p class="mb-0 pt-4">&copy; 2025 Designed by PetSalud</p>
         </div>
